--- a/kliensoldali 7. csoport/progressive_templates (1)/landing_page.html
+++ b/kliensoldali 7. csoport/progressive_templates (1)/landing_page.html
@@ -26,6 +26,7 @@
 
 <body id="page-top">
 
+  
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
@@ -241,12 +242,16 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; <span data-number>2019</span> - Start Bootstrap</div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery.animate-number@0.0.14/jquery.animateNumber.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script src="js/task2.js"></script>
   <script src="js/task3.js"></script>
+  <script src="js/task4.js"></script>
+  <script src="js/task6.js"></script>
 </body>
 
 </html>
