--- a/kliensoldali 4. csoport/1. óra/progressive_templates (1) másolata/landing_page.html
+++ b/kliensoldali 4. csoport/1. óra/progressive_templates (1) másolata/landing_page.html
@@ -242,16 +242,14 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; <span>2019</span> - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery.animate-number@0.0.14/jquery.animateNumber.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script src="js/task2.js"></script>
   <script src="js/task3.js"></script>
-  <script src="js/task4.js"></script>
-  <script src="js/task5.js"></script>
+  
 </body>
 
 </html>
